[package]
name = "ensure_no_std"
version = "0.1.0"
authors = ["wcampbell <wcampbell1995@gmail.com>"]
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true

[dependencies]
rsadsb_common = { path = "../rsadsb_common", default-features = false, features = ["alloc"] }
cortex-m-rt = "0.7.3"
embedded-alloc = "0.5.0"
adsb_deku = { path = "../libadsb_deku", default-features = false, features = ["alloc"] }
hexlit = "0.5.0"
